added temporary artist name and new json file

--- a/Kset.html
+++ b/Kset.html
@@ -3,6 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Interfaces</title>
+    <link class = "favicon" rel="icon" href="assets/icon.webp" type="image/webp">
     <link rel="stylesheet" href="assets/Kset.css">
 </head>
 <body>
@@ -105,6 +106,11 @@
                     <!-- End of Static Artist Page -->
 
                 </div>
+            </div>
+
+            <!-- Artist Page-->
+            <div id="artist-profile" class="artist-profile entireHeight hide-floating">
+                <h1 class="text">Artist</h1>
             </div>
 
             <!-- Audio Player Footer -->
