added songs to artist page, need to fix css

--- a/Kset.html
+++ b/Kset.html
@@ -109,9 +109,7 @@
             </div>
 
             <!-- Artist Page-->
-            <div id="artist-profile" class="artist-profile entireHeight hide-floating">
-                <h1 class="text">Artist</h1>
-            </div>
+            <div id="artist-profile" class="artist-profile entireHeight hide-floating"></div>
 
             <!-- Audio Player Footer -->
             <div id="footer" class="footer hide-floating"> 
