started profile page

--- a/Kset.html
+++ b/Kset.html
@@ -93,20 +93,7 @@
             <!-- Account Page -->
             <div id="account" class="account entireHeight hide-floating"><b class="text">Your Account Information</b></div>
             <!-- Profile Page -->
-            <div id="profile" class="profile entireHeight hide-floating">
-                <b class="text">Your Profile</b>
-                <b class="text">Your Top Artist</b>
-                <div class="artist-wrapper">
-            
-                    <!-- Start of Static Artist Page -->
-                    <img src="assets/vald.webp" class="artist-profile"/>
-                    <b class="text">Vald</b>
-                    <div class="playlist-song"><img src="assets/play.webp" class="playlist-item-play"><img class="playlist-item-cover" src="assets/XEU.webp"><b class="text">Désaccordé</b></div>
-                    <div class="playlist-song"><img src="assets/play.webp" class="playlist-item-play"><img class="playlist-item-cover" src="assets/V.webp"><b class="text">Anunnaki</b></div>
-                    <!-- End of Static Artist Page -->
-
-                </div>
-            </div>
+            <div id="profile" class="profile entireHeight hide-floating"></div>
 
             <!-- Artist Page-->
             <div id="artist-profile" class="artist-profile entireHeight hide-floating"></div>
