added nonfunctional follow button and fixed a few visual things

--- a/Kset.html
+++ b/Kset.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>User Interfaces</title>
-    <link class = "favicon" rel="icon" href="assets/icon.webp" type="image/webp">
+    <link class = "favicon" rel="icon" href="assets/icon_notext.webp" type="image/webp">
     <link rel="stylesheet" href="assets/Kset.css">
 </head>
 <body>
