fixed bug on floating animation, fixed responsive footer, fixed responsive search bar, added cool login annimation, added button animation

--- a/Kset.html
+++ b/Kset.html
@@ -193,7 +193,7 @@
             <div id="search-results" class="search-results">
                 
             </div>
-            <button id="button-playlist" class="text sign-button fade">
+            <button id="button-playlist" class="text sign-button">
                 <b class="text">Create Playlist</b>
             </button>
         </div>
