nice animation, fixed opacity glitch

--- a/Kset.html
+++ b/Kset.html
@@ -193,13 +193,8 @@
             <form>
                 <input id="playlist-name" type="text" class="text sign-inputs fade" placeholder="Playlist Name"><input type="reset" class="text clear-input" tabindex="-1" value="X"></input>
             </form>
-            <form>
-                <input id="playlist-search-bar" class="playlist-search-bar text sign-inputs fade" type="text" onkeyup="searchSongs()" placeholder="Search to add songs..."><input type="reset" class="text clear-input" value="X"></input>
-            </form>
-            <div id="search-results" class="search-results">
-                
-            </div>
-            <button id="button-playlist" class="text sign-button">
+            
+            <button id="button-playlist" class="sign-button button ">
                 <b class="text">Create Playlist</b>
             </button>
         </div>
